--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "> Pithy project description",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
     "dev": "webpack --minimize",
     "build": "webpack -p",
     "start": "nodemon ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
     "test:watch": "npm run test -- --watch"
   },
   "repository": {
@@ -39,12 +38,14 @@
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
+    "classnames": "^2.2.5",
     "lodash": "^3.10.1",
     "nodemon": "^1.11.0",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
-    "redux": "^3.0.4"
+    "redux": "^3.0.4",
+    "uuid": "^3.0.1"
   }
 }
